@@ -3,6 +3,7 @@ Portfolio Press 1.6
 - Update $content_width on full page templates
 - Improvements for password protected portfolio posts
 - Normalize post meta
+- New portfoliopress_posts_per_page filter
 
 Portfolio Press 1.5
 
